# CMake_for_cpp

./: .gitignore  CMakeLists.txt  COMMIT_CONVENTION.md  README.md
Project1/: CMakeLists.txt
Project1/include/: Project1.h  func.h  namespace.h
Project1/modules/: employee.ixx
Project1/modules/comb/: Database_c.ixx  Employee_c.ixx
Project1/modules/final/: Employee.ixx
Project1/modules/practice/: airline_ticket_p6.ixx  employee_p1.ixx  employee_p3.ixx
Project1/src/: Project1.cpp  chap1.cpp  chap2.cpp  func.cpp  p1c1d1_gcc.cpp  p1c1d1_msvc.cpp  p1c1d2.cpp  p1d1.cpp  p1d1_msvc.cpp
Project1/src/final/: DatabaseTest.cpp  Employee.cpp  EmployeeTest.cpp
Project1/src/practice/: prac1.cpp  prac2.cpp  prac6.cpp
Project10/: CMakeLists.txt
Project10/modules/: DoubleSpreadsheetCell_ch10.ixx  MyWeatherPrediction.cpp  WeatherPrediction.cpp  WeatherPrediction.ixx
Project10/solution/prac/: HR_ch10_prac.ixx  ch10_prac.cpp
Project10/solution/prac1/: Director_ch10_prac.ixx  Employee_ch10_prac.ixx  Manager_ch10_prac.ixx
Project10/src/: ch10_1.cpp  ch10_2.cpp  ch10_5.cpp  ch10_6.cpp
Project11/: CMakeLists.txt
Project11/modules/: Simulator_prac1.ixx  Simulator_prac3.ixx
Project11/modules/impl/: CarSimulator_prac2.cpp  Simulator_internals.cpp
Project11/src/: ch11_1.cpp
Project12/: CMakeLists.txt
Project12/modules/: GameBoard.ixx
Project12/modules/implement/: GameBoard.cpp
Project12/src/: ch12_1.cpp  ch12_2.cpp
Project13/: CMakeLists.txt
Project13/docs/: test.txt
Project13/src/: ch13_1.cpp  ch13_2.cpp  ch13_4.cpp  ch13_5.cpp  ch13_6.cpp
Project14/: CMakeLists.txt
Project14/docs/: test1.txt
Project14/src/: ch14_2.cpp  ch14_4.cpp  ch14_5.cpp  ch14_6.cpp  ch14_7.cpp
Project15/: CMakeLists.txt
Project15/modules/: SpreadsheetCell.ixx
Project15/solution/prac1/: ch15_prac1.cpp  ch15_prac1.ixx
Project15/solution/prac2/: ch15_prac2.ixx
Project15/src/: ch15_2.cpp
Project16/: CMakeLists.txt
Project16/solution/: prac4.md
Project16/src/: ch16_1.cpp
Project17/: CMakeLists.txt
Project17/solution/prac1/: ch17_prac1.cpp
Project17/solution/prac2/: ch17_prac2.cpp
Project17/solution/prac3/: ch17_prac3.cpp
Project17/solution/prac4/: ch17_prac4.cpp
Project17/src/: ch17_1.cpp  ch17_3.cpp  ch17_4.cpp  ch17_5.cpp  ch17_6.cpp
Project18/: CMakeLists.txt
Project18/solution/prac1/: ch18_prac1.cpp
Project18/solution/prac2/: Person.ixx  PhoneBook.ixx  ch18_prac2.cpp
Project18/solution/prac3/: ch18_prac3.cpp
Project18/solution/prac4/: ch18_prac4.cpp
Project18/src/: ch18_1.cpp  ch18_10.cpp  ch18_12.cpp  ch18_14.cpp  ch18_15.cpp  ch18_16.cpp  ch18_17.cpp  ch18_19.cpp  ch18_4.cpp  ch18_5.cpp  ch18_6.cpp  ch18_7.cpp  ch18_9.cpp
Project19/: CMakeLists.txt
Project19/solution/: ch19_prac2.cpp  ch19_prac3.cpp  ch19_prac5.cpp
Project19/src/: ch19_2.cpp  ch19_3.cpp  ch19_5.cpp
Project2/: CMakeLists.txt
Project2/src/: chap1.cpp  p2d1.cpp
Project20/: CMakeLists.txt
Project20/src/: ch20_1.cpp  ch20_11.cpp  ch20_4.cpp  ch20_5.cpp  ch20_6.cpp  ch20_7.cpp  ch20_9.cpp
Project21/: CMakeLists.txt
Project21/solution/: ch21_prac4.cpp
Project21/src/: ch21_1.cpp  ch21_3.cpp  ch21_4.cpp
Project22/: CMakeLists.txt
Project22/solution/: ch22_prac3.cpp
Project22/src/: ch22_1.cpp
Project3/src/: prac1.md  prac3.md  prac4.md
Project4/solution/: prac1.md  prac4.md
Project5/solution/: prac2.md  prac4.md
Project6/solution/: prac1.md  prac4.md
Project7/: CMakeLists.txt
Project7/solution/: prac1.md  prac3.cpp  prac4.cpp
Project7/src/: ch7_1.cpp  ch7_2.cpp  ch7_3_GNU.cpp  ch7_3_MSVC.cpp  ch7_4.cpp
Project8/: CMakeLists.txt
Project8/modules/: SpreadsheetCell.ixx
Project8/solution/: ch8_m3.ixx  ch8_prac1.cpp
Project8/src/: ch8_1.cpp  ch8_test.cpp
Project9/: CMakeLists.txt
Project9/modules/: SpreadsheetCell_1.ixx  Spreadsheet_1.ixx  Spreadsheet_2.ixx  Spreadsheet_3.ixx  Spreadsheet_test.ixx
Project9/src/: ch9_1.cpp  ch9_test.cpp
Z0.Project1/: CMakeLists.txt
Z0.Project1/include/: Project1.h
Z0.Project1/modules/: airline_ticket.ixx
Z0.Project1/modules/comb/: Employee_c.ixx
Z0.Project1/modules/final/: Database.ixx  Employee.ixx
Z0.Project1/modules/practice/: airline_ticket_p5.ixx  airline_ticket_p6.ixx  employee_p2.ixx  employee_p4.ixx
Z0.Project1/src/: p1c1d1_gcc.cpp
Z0.Project1/src/final/: Database.cpp  Main.cpp  Main_c.cpp
Z0.Project1/src/practice/: prac3.cpp  prac4.cpp  prac5.cpp
Z0.Project2/: CMakeLists.txt
Z0.Project2/src/: prac1.cpp  prac2.cpp  prac3.cpp  prac4.cpp
Z0.Project3/solution/: prac2.md
Z0.Project4/solution/: prac2.md  prac3.md
Z0.Project5/solution/: prac1.md  prac3.md
Z0.Project6/solution/: prac2.md  prac3.md
Z0.Project7/: CMakeLists.txt
Z0.Project7/solution/: prac2.md  prac3.cpp
Z0.Project8/solution/: ch8_m2.ixx  ch8_m3.ixx  ch8_m4.ixx  ch8_prac2.cpp  ch8_prac3.cpp  ch8_prac4.cpp
Z0.Project8/src/: ch8_1.cpp  ch8_2.cpp
Z0.Project9/: CMakeLists.txt
Z0.Project9/modules/: SpreadsheetCell_1.ixx
Z0.Project9/solution/prac1/: ch9_m1.ixx  ch9_prac1.cpp
Z0.Project9/solution/prac2/: ch9_prac2.cpp
Z0.Project9/solution/prac3/: ch9_prac3.cpp
Z0.Project9/solution/prac4/: ch9_m4.cpp  ch9_m4.ixx
Z0.Project9/src/: ch9_test.cpp
Z1.Project10/modules/: DoubleSpreadsheetCell_ch10.ixx  MyWeatherPrediction.cpp  MyWeatherPrediction.ixx  SpreadsheetCell_ch10.ixx  StringSpreadsheetCell_ch10.ixx
Z1.Project10/src/: ch10_2.cpp  ch10_3.cpp  ch10_4.cpp
Z1.Project11/modules/: Person.ixx  Simulator_prac2.ixx
Z1.Project11/src/: ch11_prac1.cpp  ch11_prac2.cpp  ch11_prac3.cpp
Z1.Project12/modules/: Grid.ixx  KeyValuePair.ixx  KeyValuePair2.ixx
Z1.Project12/src/: GameBoardTest.cpp  concat.cpp
Z1.Project13/solution/: test.txt
Z1.Project13/src/: ch13_3.cpp
Z1.Project14/: CMakeLists.txt
Z1.Project14/src/: ch14_1.cpp  (+3 more)
Z1.Project16/: CMakeLists.txt
Z1.Project18/: CMakeLists.txt
Z1.Project18/src/: ch18_11.cpp  ch18_18.cpp  ch18_2.cpp  ch18_3.cpp  ch18_8.cpp
Z2.Project21/: CMakeLists.txt
Z2.Project22/: CMakeLists.txt
Z2.Project23/: CMakeLists.txt
Z2.Project24/: CMakeLists.txt
(+79 files in other folders)
