add_executable(ch14_1 "src/ch14_1.cpp")

add_executable(ch14_2 "src/ch14_2.cpp")

add_executable(ch14_3 "src/ch14_3.cpp")

add_executable(ch14_4 "src/ch14_4.cpp")

add_executable(ch14_5 "src/ch14_5.cpp")

add_executable(ch14_6 "src/ch14_6.cpp")

add_executable(ch14_7 "src/ch14_7.cpp")

add_executable(ch14_8 "src/ch14_8.cpp")

add_executable(ch14_9 "src/ch14_9.cpp")

add_executable(ch14_prac1 "solution/prac1/ch14_prac1.cpp")

add_executable(ch14_prac2 "solution/prac2/ch14_prac2.cpp")