add_executable(ch17_1 "src/ch17_1.cpp")

add_executable(ch17_2 "src/ch17_2.cpp")

add_executable(ch17_3 "src/ch17_3.cpp")

add_executable(ch17_4 "src/ch17_4.cpp")

add_executable(ch17_5 "src/ch17_5.cpp")

add_executable(ch17_6 "src/ch17_6.cpp")

add_executable(ch17_prac1 "solution/prac1/ch17_prac1.cpp")

add_executable(ch17_prac2 "solution/prac2/ch17_prac2.cpp")

add_executable(ch17_prac3 "solution/prac3/ch17_prac3.cpp")

add_executable(ch17_prac4 "solution/prac4/ch17_prac4.cpp")