add_executable(ch19_1 "src/ch19_1.cpp")

add_executable(ch19_2 "src/ch19_2.cpp" "src/ch19_2_2.cpp" "include/Employee.h")
target_include_directories(ch19_2 PUBLIC include)

add_executable(ch19_3 "src/ch19_3.cpp")

add_executable(ch19_4 "src/ch19_4.cpp")

add_executable(ch19_5 "src/ch19_5.cpp")

add_executable(ch19_6 "src/ch19_6.cpp")

add_executable(ch19_7 "src/ch19_7.cpp")

add_executable(ch19_8 "src/ch19_8.cpp")

add_executable(ch19_9 "src/ch19_9.cpp")