# CMakeList.txt: Project1에 대한 CMake 프로젝트, 여기에 소스를 포함하고
# 프로젝트 특정 논리를 정의합니다.

# Project2의 실행파일
add_executable(p2c1 "src/p2d1.cpp")


#############################################################################
## 연습문제
#############################################################################
## 연습문제1.
add_executable(P2_Prac1 "src/prac1.cpp")
#############################################################################
## 연습문제2.
add_executable(P2_Prac2 "src/prac2.cpp")
#############################################################################
## 연습문제3.
add_executable(P2_Prac3 "src/prac3.cpp")
#############################################################################
## 연습문제4.
add_executable(P2_Prac4 "src/prac4.cpp")
#############################################################################